--- a/config_sample.env
+++ b/config_sample.env
@@ -13,3 +13,6 @@ IS_TEAM_DRIVE = ""
 INDEX_URL = ""
 USER_SESSION_STRING = ""
 USE_SERVICE_ACCOUNTS = ""
+
+# Optional config
+AUTHORIZED_CHATS = "" #Separated by space
