gitignore: ignore virtual environments

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
+.venv/
+venv/
+.env/
+env/
+.vscode/
+.idea/
+*.pyc
 config.env
 *auth_token.txt
-*.pyc
+accounts/*
 downloads/*
 download/*
 data*
-.vscode
-.idea
 *.json
 *.pickle
 authorized_chats.txt
 log.txt
-accounts/*
