--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-appdirs
-aria2p
-beautifulsoup4
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-js2py
-lxml
-psutil
-python-magic
-Pyrogram
-python-dotenv
-python-magic
-python-telegram-bot
-requests
-tenacity
-TgCrypto
-youtube_dl
+appdirs==1.4.4
+aria2p==0.10.4
+beautifulsoup4==4.9.3
+google-api-python-client==2.2.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.4
+Js2Py==0.71
+lxml==4.6.3
+psutil==5.8.0
+Pyrogram==1.2.9
+python-dotenv==0.17.0
+python-magic==0.4.22
+python-telegram-bot==13.4.1
+requests==2.22.0
+tenacity==7.0.0
+TgCrypto==1.2.2
+youtube-dl==2021.4.17
