--- a/config_sample.env
+++ b/config_sample.env
@@ -12,8 +12,8 @@ IS_TEAM_DRIVE = ""
 TELEGRAM_API = 
 TELEGRAM_HASH = ""
 DATABASE_URL = ""
-UPSTREAM_REPO = "https://github.com/breakdowns/slam-mirrorbot"
-UPSTREAM_BRANCH = "master"
+UPSTREAM_REPO = "https://github.com/sainak/python-aria-mirror-bot"
+UPSTREAM_BRANCH = "main"
 # OPTIONAL CONFIG
 AUTHORIZED_CHATS = ""
 IGNORE_PENDING_REQUESTS = ""
